--- a/sddm/theme.conf
+++ b/sddm/theme.conf
@@ -1,8 +1,7 @@
 [General]
 
-Background="Backgrounds/win11.png"
-## Path relative to the theme root directory. Most standard image file formats are allowed including support for transparency. (e.g. background.jpeg/illustration.GIF/Foto.png/undraw.svgz)
-
+Background="Backgrounds/lofi_monitors.jpg"
+## Path relative to the theme root directory. Most standard image file formats are allowed including support for transparency. (e.g. background.jpeg/illustration.GIF/Foto.png/undraw.svg
 DimBackgroundImage="0.0"
 ## Double between 0 and 1 used for the alpha channel of a darkening overlay. Use to darken your background image on the fly.
 
@@ -34,26 +33,31 @@ HaveFormBackground="true"
 FormPosition="right"
 ## Position of the form which takes roughly 1/3 of screen estate. Can be left, center or right.
 
-BackgroundImageHAlignment="right"
+BackgroundImageHAlignment="center"
 ## Horizontal position of the background picture relative to its visible area. Applies when ScaleImageCropped is set to false or when HaveFormBackground is set to true and FormPosition is either left or right. Can be left, center or right; defaults to center if none is passed.
 
 BackgroundImageVAlignment="center"
 ## As before but for the vertical position of the background picture relative to its visible area.
 
-MainColor="#7aa2f7"
+MainColor="#F65DAF"
+##ee99a0 pinkki (sama kuin hypr reunat)
+###7aa2f7
 ## Used for all elements when not focused/hovered etc. Usually the best effect is achieved by having this be either white or a very dark grey like #444 (not black for smoother antialias)
 ## Colors can be HEX or Qt names (e.g. red/salmon/blanchedalmond). See https://doc.qt.io/qt-5/qml-color.html
 
-AccentColor="#7aa2f7"
+AccentColor="#FA98ED"
+##6E738D
+## #24273A#7aa2f7#181926
 ## Used for elements in focus/hover/pressed. Should be contrasting to the background and the MainColor to achieve the best effect.
 
-BackgroundColor="#16161e"
+BackgroundColor="#24273A"
+##16161e
 ## Used for the user and session selection background as well as for ScreenPadding and FormBackground when either is true. If PartialBlur and FormBackground are both enabled this color will blend with the blur effect.
 
 OverrideLoginButtonTextColor="#16161E"
 ## The text of the login button may become difficult to read depending on your color choices. Use this option to set it independently for legibility.
 
-InterfaceShadowSize="6"
+InterfaceShadowSize="8"
 ## Integer used as multiplier. Size of the shadow behind the user and session selection background. Decrease or increase if it looks bad on your background. Initial render can be slow no values above 5-7.
 
 InterfaceShadowOpacity="0.6"
@@ -65,7 +69,7 @@ RoundCorners="20"
 ScreenPadding="0"
 ## Integer in pixels. Increase or delete this to have a padding of color BackgroundColor all around your screen. This makes your login greeter appear as if it was a canvas. Cool!
 
-Font="JetBrainsMono Nerd Font"
+Font="JetBrainsMono Nerd Font Mono"
 ## If you want to choose a custom font it will have to be available to the X root user. See https://wiki.archlinux.org/index.php/fonts#Manual_installation
 
 FontSize=""
@@ -103,10 +107,10 @@ AllowBadUsernames="false"
 
 ## [Locale Settings]
 
-Locale=""
+Locale="fi_FI.UTF-8 UTF-8"
 ## The time and date locale should usually be set in your system settings. Only hard set this if something is not working by default or you want a seperate locale setting in your login screen.
 
-HourFormat="hh:mm AP"
+HourFormat="hh:mm"
 ## Defaults to Locale.ShortFormat - Accepts "long" or a custom string like "hh:mm A". See http://doc.qt.io/qt-5/qml-qtqml-date.html
 
 DateFormat="dddd  MMM d"
@@ -116,7 +120,7 @@ DateFormat="dddd  MMM d"
 
 ## [Translations]
 
-HeaderText="Hello!"
+HeaderText="arch btw"
 ## Header can be empty to not display any greeting at all. Keep it short.
 
 ## SDDM may lack proper translation for every element. Suger defaults to SDDM translations. Please help translate SDDM as much as possible for your language: https://github.com/sddm/sddm/wiki/Localization. These are in order as they appear on screen.
