--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,11 +4,23 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+# change monitor to hires, the last argument is the scale factor
+monitor=,highres,auto,1.4
 
+# sets xwayland scale
+exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 1.4
+
+# toolkit-specific scale
 #set $gnome-schema org.gnome.desktop.interface
 
-# From theme folder (not sure what the differences between different subthemes is but whatever (themes installed through yay)
+xwayland {
+  force_zero_scaling = true
+}
+
+env = GDK_SCALE,2
+env = XCURSOR_SIZE,24
+
+# From theme folder (/usr/share/themes) 
     #gsettings set $gnome-schema icon-theme 'Your icon theme'
     #gsettings set $gnome-schema cursor-theme 'Your cursor Theme'
     #gsettings set $gnome-schema font-name 'Your font name'
@@ -27,14 +39,12 @@ exec-once=/usr/lib/polkit-kde-authentication-agent-1
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
-# Some default env vars.
-env = XCURSOR_SIZE,24
 
 # Window rules
 #windowrule=float, ^(.*)$ 
 windowrulev2 = float, title:(Volume Control|blueman-manager)
-windowrulev2 = move 50% 5%, title:(blueman-manager)
-windowrulev2 = move 63% 5%, title:(Volume Control)
+windowrulev2 = move 48% 5%, title:(blueman-manager)
+windowrulev2 = move 33% 5%, title:(Volume Control)
 
 
 
@@ -43,29 +53,30 @@ input {
     kb_layout = fi
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = ctrl:nocaps
     kb_rules =
 
     follow_mouse = 1
+
 
     touchpad {
         natural_scroll = true
     }
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.5 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 2
-    gaps_out = 1
+    gaps_out = 2
     border_size = 2
     col.active_border =  rgba(EE99A0ee) #rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
     resize_on_border = true
     hover_icon_on_border = false
-    extend_border_grab_area = 20
+    extend_border_grab_area = 40
 
     layout = dwindle
 }
@@ -138,7 +149,7 @@ misc {
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
-$home = /home/eax
+$home = /home/$(whoami)
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, kitty
 bind = $mainMod, C, killactive, 
@@ -146,18 +157,20 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, F, togglefloating, 
 bind = $mainMod, R, exec, wofi --show drun
+bind = $mainMod, W, exec, ~/Scripts/wallpaper_selector.sh
 #bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod, P, fullscreen
 bind = $mainMod, S, exec, hyprshot -m region -o $home/Screenshots
 bind = $mainMod, A, exec, hyprshot -m window -o $home/Screenshots
 bind = $mainMod, D, exec, hyprshot -m output -o $home/Screenshots
+bind = $mainMod, U, exec, ~/Scripts/powermenu.sh
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
