--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,7 @@
 monitor=,highres,auto,1.4
 
 # sets xwayland scale
-exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 1.4
+exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 1.6
 
 # toolkit-specific scale
 #set $gnome-schema org.gnome.desktop.interface
@@ -17,8 +17,8 @@ xwayland {
   force_zero_scaling = true
 }
 
-env = GDK_SCALE,2
-env = XCURSOR_SIZE,24
+#env = GDK_SCALE,1.4
+env = XCURSOR_SIZE,14
 
 # From theme folder (/usr/share/themes) 
     #gsettings set $gnome-schema icon-theme 'Your icon theme'
@@ -30,7 +30,7 @@ exec = gsettings set org.gnome.desktop.interface gtk-theme Catppuccin-Macchiato-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & hyprpaper & firefox
+exec-once = waybar & firefox & swaybg -i $HOME/Wallpapers/kimono_macchiato.png
 exec-once=/usr/bin/dunst
 exec-once=/usr/lib/polkit-kde-authentication-agent-1
 #exec=gsettings set org.gnome.desktop.interface gtk-theme catppuccin-gtk-theme-mocha
@@ -43,8 +43,9 @@ exec-once=/usr/lib/polkit-kde-authentication-agent-1
 # Window rules
 #windowrule=float, ^(.*)$ 
 windowrulev2 = float, title:(Volume Control|blueman-manager)
-windowrulev2 = move 48% 5%, title:(blueman-manager)
-windowrulev2 = move 33% 5%, title:(Volume Control)
+#windowrulev2 = move 48% 5%, title:(blueman-manager)
+#windowrulev2 = move 33% 5%, title:(Volume Control)
+windowrule = opacity 0.8, obsidian
 
 
 
@@ -53,7 +54,7 @@ input {
     kb_layout = fi
     kb_variant =
     kb_model =
-    kb_options = ctrl:nocaps
+    kb_options = left:super_win, ctrl:Super_L
     kb_rules =
 
     follow_mouse = 1
@@ -85,11 +86,12 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 10
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
-
+    blur {
+		enabled = yes
+		size = 3
+		passes = 1
+		new_optimizations = on
+	}
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
@@ -150,14 +152,16 @@ misc {
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 $home = /home/$(whoami)
+
+bind = $mainMod, XF86WakeUp, exec, kitty
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, kitty
 bind = $mainMod, C, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, F, togglefloating, 
-bind = $mainMod, R, exec, wofi --show drun
-bind = $mainMod, W, exec, ~/Scripts/wallpaper_selector.sh
+bind = $mainMod, R, exec, wofi --show drun --style=$HOME/.config/wofi/style.css
+bind = $mainMod, W, exec, ~/Scripts/swaybg_selector.sh
 #bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod, P, fullscreen
