wofi and updates

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -42,7 +42,7 @@ exec-once=/usr/lib/polkit-kde-authentication-agent-1
 
 # Window rules
 #windowrule=float, ^(.*)$ 
-windowrulev2 = float, title:(Volume Control|blueman-manager)
+windowrulev2 = float, title:(Volume Control|blueman-manager|iwgtk)
 #windowrulev2 = move 48% 5%, title:(blueman-manager)
 #windowrulev2 = move 33% 5%, title:(Volume Control)
 windowrule = opacity 0.8, obsidian
