--- a/Desktop/hyprland.conf
+++ b/Desktop/hyprland.conf
@@ -30,15 +30,18 @@ env = XCURSOR_SIZE,14
     #gsettings set $gnome-schema icon-theme 'Your icon theme'
     #gsettings set $gnome-schema cursor-theme 'Your cursor Theme'
     #gsettings set $gnome-schema font-name 'Your font name'
-exec-once=gsettings set org.gnome.desktop.interface gtk-theme Catppuccin-Macchiato-Standard-Maroon-dark
+exec-once = gsettings set org.gnome.desktop.interface gtk-theme Catppuccin-Macchiato-Standard-Maroon-dark
 
 exec = gsettings set org.gnome.desktop.interface gtk-theme Catppuccin-Macchiato-Standard-Maroon-dark
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & firefox & swaybg -o HDMI-A-1 -i $HOME/Wallpapers/kimono_macchiato.png & swaybg -o DP-2 -i $HOME/VerticalWallpapers/underwater_city.jpg -m fill
-exec-once=/usr/bin/dunst
-exec-once=/usr/lib/polkit-kde-authentication-agent-1
+exec-once = waybar & swaybg -o HDMI-A-1 -i $HOME/Wallpapers/rooftop_cat_macchiato.jpg & swaybg -o DP-2 -i $HOME/VerticalWallpapers/wave_circle.png -m fill
+exec-once = /usr/bin/dunst
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
+
+exec-once = hyprctl dispatch exec "[workspace 2] kitty tmux"
+exec-once = hyprctl dispatch exec "[workspace 1] firefox"
 #exec=gsettings set org.gnome.desktop.interface gtk-theme catppuccin-gtk-theme-mocha
 
 
@@ -214,3 +217,9 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+bind = $mainMod SHIFT, h, resizeactive, -10 0
+bind = $mainMod SHIFT, l, resizeactive, 10 0
+bind = $mainMod SHIFT, j, resizeactive, 0 10
+bind = $mainMod SHIFT, k, resizeactive, 0 -10
+
