tmux copy mode keybinds

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,14 +8,21 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+set-window-option -g mode-keys vi
 
-set -g @catppuccin_flavour 'macchiato'
+
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send -X copy-selection-and-cancel
+bind P paste-buffer
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
+bind Space copy-mode
 
 # List of pluginsj
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @catppuccin_flavour 'macchiato'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Other examples:
