ags hello world

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,6 @@ set-option -g default-shell /bin/zsh
 
 unbind C-b
 set -g prefix C-space
-bind C-Space send-prefix 
 set -g mouse on 
 set -g base-index 1
 set -g pane-base-index 1
@@ -11,11 +10,20 @@ set-option -g renumber-windows on
 set-window-option -g mode-keys vi
 
 
+bind C-Space send-prefix 
+bind P paste-buffer
+bind Space copy-mode
+
+
+# Copy mode keybinds
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send -X copy-selection-and-cancel
-bind P paste-buffer
+# Bind Control-u to scroll up by half-page and recenter
+bind -T copy-mode-vi C-u send -X halfpage-up \; send -X cursor-up \; send -X center-view
+# Bind Control-d to scroll down by half-page and recenter
+bind -T copy-mode-vi C-d send -X halfpage-down \; send -X cursor-down \; send -X center-view
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
-bind Space copy-mode
+
 
 # List of pluginsj
 set -g @plugin 'tmux-plugins/tpm'
