volume gui, ugly but functional

--- a/Laptop/hypr/hyprland.conf
+++ b/Laptop/hypr/hyprland.conf
@@ -1,11 +1,10 @@
-#
 # Please note not all available settings / options are set here.
 # For a full list, see the wiki
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # change monitor to hires, the last argument is the scale factor
-monitor=,highres,auto,1.4
+monitor=,highres,auto,1.3333333
 
 # sets xwayland scale
 exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 1.6
@@ -18,21 +17,22 @@ xwayland {
 }
 
 #env = GDK_SCALE,1.4
-env = XCURSOR_SIZE,14
+env = XCURSOR_SIZE,10
 
 # From theme folder (/usr/share/themes) 
     #gsettings set $gnome-schema icon-theme 'Your icon theme'
     #gsettings set $gnome-schema cursor-theme 'Your cursor Theme'
     #gsettings set $gnome-schema font-name 'Your font name'
-exec-once=gsettings set org.gnome.desktop.interface gtk-theme Catppuccin-Macchiato-Standard-Maroon-dark
+exec-once=gsettings set org.gnome.desktop.interface gtk-theme Catppuccin-Macchiato-Standard-Maroon-Dark
 
-exec = gsettings set org.gnome.desktop.interface gtk-theme Catppuccin-Macchiato-Standard-Maroon-dark
+exec = gsettings set org.gnome.desktop.interface gtk-theme Catppuccin-Macchiato-Standard-Maroon-Dark
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & firefox & swaybg -i $HOME/Wallpapers/kimono_macchiato.png
-exec-once=/usr/bin/dunst
-exec-once=/usr/lib/polkit-kde-authentication-agent-1
+exec-once = waybar & swaybg -i $HOME/Wallpapers/kimono_macchiato.png 
+exec-once = swaync
+exec-once = hyprctl dispatch exec "[workspace 1] firefox" & hyprctl dispatch exec "[workspace 3] obsidian" & hyprctl dispatch exec "[workspace 2] kitty tmux"
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 
 #exec=gsettings set org.gnome.desktop.interface gtk-theme catppuccin-gtk-theme-mocha
 
 
@@ -41,9 +41,9 @@ exec-once=/usr/lib/polkit-kde-authentication-agent-1
 
 
 # Window rules
-#windowrule=float, ^(.*)$ 
 windowrulev2 = float, title:(Volume Control|blueman-manager|iwgtk)
-#windowrulev2 = move 48% 5%, title:(blueman-manager)
+windowrulev2 = float,class:(Tk)
+windowrulev2 = move center, size: 300 500, title:(blueman-manager)
 #windowrulev2 = move 33% 5%, title:(Volume Control)
 windowrule = opacity 0.8, obsidian
 
@@ -54,7 +54,7 @@ input {
     kb_layout = fi
     kb_variant =
     kb_model =
-    kb_options = left:super_win, ctrl:Super_L
+    kb_options = ctrl:nocaps, Control_L:Super_L
     kb_rules =
 
     follow_mouse = 1
@@ -70,9 +70,9 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 2
-    gaps_out = 2
-    border_size = 2
+    gaps_in = 0
+    gaps_out = 0
+    border_size = 1
     col.active_border =  rgba(EE99A0ee) #rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
     resize_on_border = true
@@ -85,7 +85,7 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
+    rounding = 0
     blur {
 		enabled = yes
 		size = 3
@@ -155,10 +155,9 @@ $home = /home/$(whoami)
 
 bind = $mainMod, XF86WakeUp, exec, kitty
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, kitty
+bind = $mainMod, Q, exec, kitty tmux
 bind = $mainMod, C, killactive, 
-bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, thunar
+bind = $mainMod, E, exec, kitty ranger
 bind = $mainMod, F, togglefloating, 
 bind = $mainMod, R, exec, wofi --show drun --style=$HOME/.config/wofi/style.css
 bind = $mainMod, W, exec, ~/Scripts/swaybg_selector.sh
@@ -169,6 +168,10 @@ bind = $mainMod, S, exec, hyprshot -m region -o $home/Screenshots
 bind = $mainMod, A, exec, hyprshot -m window -o $home/Screenshots
 bind = $mainMod, D, exec, hyprshot -m output -o $home/Screenshots
 bind = $mainMod, U, exec, ~/Scripts/powermenu.sh
+bind = $mainMod, N, exec, swaync-client -t
+bind = $mainMod, M, exec, pactl set-sink-mute 0 toggle
+bind = $mainMod, V, exec, python ~/Scripts/volume.py
+bind = $mainMod, B, exec, blueman-manager
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
@@ -203,6 +206,11 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
+
+bind = $mainMod SHIFT, h, resizeactive, -10 0
+bind = $mainMod SHIFT, l, resizeactive, 10 0
+bind = $mainMod SHIFT, j, resizeactive, 0 10
+bind = $mainMod SHIFT, k, resizeactive, 0 -10
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
