fixed laptop hyprland.conf

--- a/Laptop/hypr/hyprland.conf
+++ b/Laptop/hypr/hyprland.conf
@@ -160,7 +160,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, E, exec, kitty ranger
 bind = $mainMod, F, togglefloating, 
 bind = $mainMod, R, exec, wofi --show drun --style=$HOME/.config/wofi/style.css
-bind = $mainMod, W, exec, ~/Scripts/swaybg_selector.sh
+bind = $mainMod, W, exec, ~/Scripts/swaybg_selector.sh ~/Wallpapers eDP-1 fill
 #bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod, P, fullscreen
