tmux + a line in vol

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,7 @@ set-window-option -g mode-keys vi
 bind C-Space send-prefix 
 bind P paste-buffer
 bind Space copy-mode
+bind-key O select-layout even-horizontal
 
 
 # Copy mode keybinds
