--- a/Desktop/config/hyprland.conf
+++ b/Desktop/config/hyprland.conf
@@ -5,13 +5,13 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # change monitor to hires, the last argument is the scale factor
-monitor=DP-2, 1920x1080@60, 2560x0, 1, transform, 3
-monitor=HDMI-A-1, 2560x1440@144, 0x0, 1
+monitor=HDMI-A-1, 1920x1080@60, 2560x-420, 1, transform, 3
+monitor=DP-2, 2560x1440@144, 0x0, 1
 
-workspace=HDMI-A-1, 1
-workspace=HDMI-A-1, 2
-workspace=HDMI-A-1, 3
-workspace=DP-2, 4, default:4
+workspace=DP-2, 1
+workspace=DP-2, 2
+workspace=DP-2, 3
+workspace=HDMI-A-1, 4, default:4
 
 # sets xwayland scale
 exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 1.6
@@ -36,11 +36,12 @@ exec = gsettings set org.gnome.desktop.interface gtk-theme Catppuccin-Macchiato-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & swaybg -o HDMI-A-1 -i $HOME/Wallpapers/rooftop_cat_macchiato.jpg & swaybg -o DP-2 -i $HOME/VerticalWallpapers/wave_circle.png -m fill
-exec-once = /usr/bin/dunst
+exec-once = waybar & swaybg -o DP-2 -i $HOME/Wallpapers/moon_csman_macchiato.png & swaybg -o HDMI-A-1 -i $HOME/VerticalWallpapers/plain.png -m fill
+exec-once = swaync
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 exec-once = hyprctl dispatch exec "[workspace 2] kitty tmux"
+exec-once = hyprctl dispatch exec "[workspace 3] obsidian"
 exec-once = hyprctl dispatch exec "[workspace 1] firefox"
 #exec=gsettings set org.gnome.desktop.interface gtk-theme catppuccin-gtk-theme-mocha
 
@@ -54,8 +55,9 @@ exec-once = hyprctl dispatch exec "[workspace 1] firefox"
 windowrulev2 = float, title:(Volume Control|blueman-manager|iwgtk|pavucontrol|Bluetooth Devices)
 #windowrulev2 = move 48% 5%, title:(blueman-manager)
 #windowrulev2 = move 33% 5%, title:(Volume Control)
-windowrule = opacity 0.8, obsidian
-
+windowrule = opacity 0.9, obsidian
+windowrulev2 = float, class:(Tk)
+windowrule=float,title:^(DataDashboard)$
 
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -79,14 +81,14 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 2
-    gaps_out = 2
-    border_size = 2
+    gaps_in = 0
+    gaps_out = 0
+    border_size = 1
     col.active_border =  rgba(EE99A0ee) #rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.inactive_border = rgba(292C42ee)
     resize_on_border = true
-    hover_icon_on_border = false
-    extend_border_grab_area = 40
+    hover_icon_on_border = true
+    extend_border_grab_area = 60
 
     layout = dwindle
 }
@@ -94,12 +96,16 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
+    rounding = 0
     blur {
 		enabled = yes
 		size = 3
 		passes = 1
 		new_optimizations = on
+#		ignore_opacity = true
+#		noise = 0.2
+#		contrast = 0.5
+#		vibrancy = 0.5
 	}
     drop_shadow = yes
     shadow_range = 4
@@ -164,14 +170,14 @@ $home = /home/$(whoami)
 
 bind = $mainMod, XF86WakeUp, exec, kitty
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, kitty
+bind = $mainMod, Q, exec, kitty tmux
+bind = $mainMod, I, exec, kitty
 bind = $mainMod, C, killactive, 
-bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, thunar
+bind = $mainMod, E, exec, kitty ranger
 bind = $mainMod, F, togglefloating, 
 bind = $mainMod, R, exec, wofi --show drun --style=$HOME/.config/wofi/style.css
-bind = $mainMod, W, exec, ~/Scripts/swaybg_selector.sh ~/Wallpapers HDMI-A-1 fill
-bind = $mainMod SHIFT, W, exec, ~/Scripts/swaybg_selector.sh ~/VerticalWallpapers DP-2 fill
+bind = $mainMod, W, exec, ~/Scripts/swaybg_selector.sh ~/Wallpapers DP-2 fill
+bind = $mainMod SHIFT, W, exec, ~/Scripts/swaybg_selector.sh ~/VerticalWallpapers HDMI-A-1 fill
 #bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod, P, fullscreen
@@ -179,6 +185,11 @@ bind = $mainMod, S, exec, hyprshot -m region -o $home/Screenshots
 bind = $mainMod, A, exec, hyprshot -m window -o $home/Screenshots
 bind = $mainMod, D, exec, hyprshot -m output -o $home/Screenshots
 bind = $mainMod, U, exec, ~/Scripts/powermenu.sh
+bind = $mainMod, N, exec, swaync-client -t
+bind = $mainMod, M, exec, pactl set-sink-mute 0 toggle
+bind = $mainMod, V, exec, python ~/Scripts/volume.py
+bind = $mainMod, B, exec, blueman-manager
+
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
@@ -222,4 +233,3 @@ bind = $mainMod SHIFT, h, resizeactive, -10 0
 bind = $mainMod SHIFT, l, resizeactive, 10 0
 bind = $mainMod SHIFT, j, resizeactive, 0 10
 bind = $mainMod SHIFT, k, resizeactive, 0 -10
-
