--- a/Laptop/hypr/hyprland.conf
+++ b/Laptop/hypr/hyprland.conf
@@ -74,10 +74,10 @@ general {
     gaps_out = 0
     border_size = 1
     col.active_border =  rgba(EE99A0ee) #rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.inactive_border = rgba(292C42ee)
     resize_on_border = true
-    hover_icon_on_border = false
-    extend_border_grab_area = 40
+    hover_icon_on_border = true
+    extend_border_grab_area = 60
 
     layout = dwindle
 }
