--- a/Laptop/config/hypr/hyprland.conf
+++ b/Laptop/config/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-# Please note not all available settings / options are set here.
+
 # For a full list, see the wiki
 #
 
@@ -110,7 +110,7 @@ animations {
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = workspaces, 1, 6, default, fade
 }
 
 dwindle {
