Ctrl-Shift-u/i/o = change tmux windows

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -257,7 +257,7 @@ font_size 12.0
 #: special keyword: background. Note that if cursor is set to none
 #: then this option is ignored.
 
-# cursor_shape block
+cursor_shape block
 
 #: The cursor shape can be one of block, beam, underline. Note that
 #: when reloading the config this will be changed only if the cursor
@@ -275,8 +275,8 @@ font_size 12.0
 # cursor_underline_thickness 2.0
 
 #: The thickness of the underline cursor (in pts).
-
-# cursor_blink_interval -1
+#cursor_blink on
+#cursor_blink_interval -1
 
 #: The interval to blink the cursor (in seconds). Set to zero to
 #: disable blinking. Negative values mean use system default. Note
@@ -1075,7 +1075,7 @@ font_size 12.0
 
 #: The foreground and background colors.
 
-background_opacity 0.9
+background_opacity 0.95
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -2351,6 +2351,9 @@ background_opacity 0.9
 
 #: }}}
 
+map ctrl+shift+u   launch --type=overlay ~/Scripts/change_tmux_window.sh 1
+map ctrl+shift+i   launch --type=overlay ~/Scripts/change_tmux_window.sh 2
+map ctrl+shift+o   launch --type=overlay ~/Scripts/change_tmux_window.sh 3 
 
 # BEGIN_KITTY_THEME
 # Catppuccin-Macchiato
