--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -14,7 +14,8 @@ bind C-Space send-prefix
 bind P paste-buffer
 bind Space copy-mode
 bind-key O select-layout even-horizontal
-
+unbind-key -T prefix f
+bind-key -T prefix f resize-pane -Z
 
 # Copy mode keybinds
 bind -T copy-mode-vi v send -X begin-selection
