--- a/Desktop/config/hypr/hyprland.conf
+++ b/Desktop/config/hypr/hyprland.conf
@@ -8,10 +8,10 @@
 monitor=HDMI-A-1, 1920x1080@60, 2560x-420, 1, transform, 3
 monitor=DP-2, 2560x1440@144, 0x0, 1
 
-workspace=DP-2, 1
-workspace=DP-2, 2
-workspace=DP-2, 3
-workspace=HDMI-A-1, 4, default:4
+workspace=1,monitor:DP-2,  default:true
+workspace=2, monitor:DP-2
+workspace=3, monitor:DP-2
+workspace=4, monitor:HDMI-A-1, default:true
 
 # sets xwayland scale
 exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 1.6
@@ -55,18 +55,15 @@ exec-once = hyprctl dispatch exec "[workspace 1] firefox"
 windowrulev2 = float, title:(Volume Control|blueman-manager|iwgtk|pavucontrol|Bluetooth Devices)
 #windowrulev2 = move 48% 5%, title:(blueman-manager)
 #windowrulev2 = move 33% 5%, title:(Volume Control)
-windowrule = opacity 0.9, obsidian
 windowrulev2 = float, class:(Tk)
-windowrule=float,title:^(DataDashboard)$
 
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = fi
-    kb_variant =
-    kb_model =
+    #kb_variant =
+    #kb_model =
     kb_options = ctrl:nocaps
-    kb_rules =
 
     follow_mouse = 1
 
@@ -107,10 +104,6 @@ decoration {
 #		contrast = 0.5
 #		vibrancy = 0.5
 	}
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 }
 
 animations {
@@ -125,7 +118,7 @@ animations {
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = workspaces, 1, 2, default, fade 
 }
 
 dwindle {
@@ -136,7 +129,6 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
 }
 
 gestures {
@@ -176,7 +168,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, E, exec, kitty ranger
 bind = $mainMod, F, togglefloating, 
 bind = $mainMod, R, exec, wofi --show drun --style=$HOME/.config/wofi/style.css --conf=$HOME/.config/wofi/config
-bind = $mainMod, W, exec, ~/Scripts/swaybg_selector.sh ~/Wallpapers DP-2 fill
+bind = $mainMod, W, exec, ~/Scripts/swaybg_selector.sh ~/Wallpapers DP-2 stretch
 bind = $mainMod SHIFT, W, exec, ~/Scripts/swaybg_selector.sh ~/VerticalWallpapers HDMI-A-1 fill
 #bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
