--- a/Laptop/config/hypr/hyprland.conf
+++ b/Laptop/config/hypr/hyprland.conf
@@ -45,7 +45,7 @@ windowrulev2 = float, title:(Volume Control|blueman-manager|iwgtk)
 windowrulev2 = float,class:(Tk)
 windowrulev2 = move center, size: 300 500, title:(blueman-manager)
 #windowrulev2 = move 33% 5%, title:(Volume Control)
-windowrule = opacity 0.8, obsidian
+windowrule = opacity 1, obsidian
 
 
 
@@ -92,10 +92,6 @@ decoration {
 		passes = 1
 		new_optimizations = on
 	}
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 }
 
 animations {
@@ -121,7 +117,6 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
 }
 
 gestures {
@@ -131,9 +126,10 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
+#
+#device:epic-mouse-v1 {
+#    sensitivity = -0.5
+#}
 
 misc {
     disable_hyprland_logo = true
@@ -215,3 +211,9 @@ bind = $mainMod SHIFT, k, resizeactive, 0 -10
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+
+# Headphone remaps (Oneplus Nord Buds)
+bind = , XF86AudioPause, exec, playerctl play-pause
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPrev, exec, playerctl previous
