earbud / phone gesture bindings for laptop and desktop + fixed laptop aliases

--- a/Desktop/config/hypr/hyprland.conf
+++ b/Desktop/config/hypr/hyprland.conf
@@ -225,3 +225,8 @@ bind = $mainMod SHIFT, h, resizeactive, -10 0
 bind = $mainMod SHIFT, l, resizeactive, 10 0
 bind = $mainMod SHIFT, j, resizeactive, 0 10
 bind = $mainMod SHIFT, k, resizeactive, 0 -10
+
+# Headphone remaps
+bind = , XF86AudioPause, exec, playerctl play-pause
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPrev, exec, playerctl previous
