--- a/Laptop/config/hypr/hyprland.conf
+++ b/Laptop/config/hypr/hyprland.conf
@@ -213,7 +213,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 
-# Headphone remaps (Oneplus Nord Buds)
+# Headphone remaps
 bind = , XF86AudioPause, exec, playerctl play-pause
 bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
