--- a/Laptop/config/hypr/hyprland.conf
+++ b/Laptop/config/hypr/hyprland.conf
@@ -104,9 +104,9 @@ animations {
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
+    animation = borderangle, off #1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default, fade
+    animation = workspaces, off #, 1, 6, default, fade
 }
 
 dwindle {
