Remove screenshot borders

--- a/Laptop/config/hypr/hyprland.conf
+++ b/Laptop/config/hypr/hyprland.conf
@@ -45,7 +45,7 @@ windowrulev2 = float, title:(Volume Control|blueman-manager|iwgtk)
 windowrulev2 = float,class:(Tk)
 windowrulev2 = move center, size: 300 500, title:(blueman-manager)
 #windowrulev2 = move 33% 5%, title:(Volume Control)
-windowrule = opacity 1, obsidian
+#windowrule = opacity 1, obsidian
 
 
 
@@ -81,6 +81,8 @@ general {
 
     layout = dwindle
 }
+
+layerrule = noanim, selection # prevents borders around screenshots
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
