Wofi style changes

--- a/Laptop/config/hypr/hyprland.conf
+++ b/Laptop/config/hypr/hyprland.conf
@@ -83,6 +83,8 @@ general {
 }
 
 layerrule = noanim, selection # prevents borders around screenshots
+layerrule = dimaround, wofi
+layerrule = noanim, wofi
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
