Hypridle, Hyprpaper, swaync, wlogout

--- a/Laptop/config/hypr/hyprland.conf
+++ b/Laptop/config/hypr/hyprland.conf
@@ -29,21 +29,23 @@ exec = gsettings set org.gnome.desktop.interface gtk-theme Catppuccin-Macchiato-
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & swaybg -i $HOME/Wallpapers/kimono_macchiato.png 
+exec-once = waybar
+exec-once = hyprpaper #swaybg -i $HOME/Wallpapers/kimono_macchiato.png 
+exec-once = hypridle
 exec-once = swaync
 exec-once = hyprctl dispatch exec "[workspace 1] firefox" & hyprctl dispatch exec "[workspace 3] obsidian" & hyprctl dispatch exec "[workspace 2] kitty tmux"
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 
-#exec=gsettings set org.gnome.desktop.interface gtk-theme catppuccin-gtk-theme-mocha
+exec-once = systemctl --user start hyprpolkitagent
 
+env = GTK_THEME, catppuccin-macchiato-maroon-standard+default
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 
 # Window rules
-windowrulev2 = float, title:(Volume Control|blueman-manager|iwgtk)
-windowrulev2 = float,class:(Tk)
-windowrulev2 = move center, size: 300 500, title:(blueman-manager)
+windowrule = float, title:(Volume Control|iwgtk)
+windowrule = float,class:(Tk|blueman-manager)
+windowrule = move center, size: 200 300, class:(blueman-manager)
 #windowrulev2 = move 33% 5%, title:(Volume Control)
 #windowrule = opacity 1, obsidian
 
@@ -103,10 +105,8 @@ animations {
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
+    animation = windows, 1, 7, default, gnomed
+    animation = windowsOut, 1, 7, default, gnomed
     animation = border, 1, 10, default
     animation = borderangle, off #1, 8, default
     animation = fade, 1, 7, default
@@ -157,17 +157,17 @@ bind = $mainMod, XF86WakeUp, exec, kitty
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, kitty tmux
 bind = $mainMod, C, killactive, 
-bind = $mainMod, E, exec, kitty ranger
+bind = $mainMod, E, exec, kitty yazi 
 bind = $mainMod, F, togglefloating, 
 bind = $mainMod, R, exec, wofi --show drun --style=$HOME/.config/wofi/style.css
-bind = $mainMod, W, exec, ~/Scripts/swaybg_selector.sh ~/Wallpapers eDP-1 fill
+bind = $mainMod, W, exec, ~/Scripts/wallpaper_selector.sh #~/Scripts/swaybg_selector.sh ~/Wallpapers eDP-1 fill
 #bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod, P, fullscreen
 bind = $mainMod, S, exec, hyprshot -m region -o $home/Screenshots
 bind = $mainMod, A, exec, hyprshot -m window -o $home/Screenshots
 bind = $mainMod, D, exec, hyprshot -m output -o $home/Screenshots
-bind = $mainMod, U, exec, ~/Scripts/powermenu.sh
+bind = $mainMod, U, exec, wlogout -b 2
 bind = $mainMod, N, exec, swaync-client -t
 bind = $mainMod, M, exec, pactl set-sink-mute 0 toggle
 bind = $mainMod, V, exec, python ~/Scripts/volume.py
