--- a/Laptop/config/hypr/hyprpaper.conf
+++ b/Laptop/config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = /$HOME/Wallpapers/lofi_white_hair.jpg
+preload = /$HOME/Wallpapers/kimono_macchiato.png
 
-wallpaper = eDP-1,/$HOME/Wallpapers/lofi_white_hair.jpg
+wallpaper = eDP-1,/$HOME/Wallpapers/kimono_macchiato.png
